--- a/index.html
+++ b/index.html
@@ -3,12 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Model - Webcam & File Upload</title>
+    <title>Vehicle Identifier</title>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+    <style>
+        body {
+            font-family: 'Sans-serif';
+            background-color: #333;
+            color: white;
+            text-align: center;
+            margin: 0;
+            padding: 20px;
+        }
+        button {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: darkred;
+        }
+        #webcam-container, #image-container, #label-container {
+            margin: 20px auto;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        #label-container {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
+        }
+        img {
+            margin: 10px;
+            border: 2px solid white;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <h1 id="title">AI Model - Choose Your Input Method</h1>
+    <h1 id="title">Vehicle Identifier</h1>
     <button id="webcam-start" type="button" onclick="startWebcam()">Use Webcam</button>
     <button id="file-upload" type="button" onclick="uploadImage()">Upload Image</button>
     <br>
@@ -85,8 +125,3 @@
                 const classPrediction =
                     predictions[i].className + " : " + (predictions[i].probability.toFixed(3) * 100) + "%";
                 labelContainer.appendChild(document.createElement("div")).innerHTML = classPrediction;
-            }
-        }
-    </script>
-</body>
-</html>
