--- a/index.html
+++ b/index.html
@@ -3,60 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vehicle Identifier</title>
+    <title>AI Model - Webcam & File Upload</title>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-    <style>
-        body {
-            font-family: 'Sans-serif';
-            background-color: #333;
-            color: white;
-            text-align: center;
-            margin: 0;
-            padding: 20px;
-        }
-        button {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            margin: 10px;
-            cursor: pointer;
-            border-radius: 5px;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: darkred;
-        }
-        #webcam-container, #image-container, #label-container {
-            margin: 20px auto;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-        #label-container {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-        }
-        img {
-            margin: 10px;
-            border: 2px solid white;
-            border-radius: 5px;
-        }
-        #loading {
-            display: none;
-            color: yellow;
-        }
-    </style>
 </head>
 <body>
-    <h1 id="title">Vehicle Identifier</h1>
+    <h1 id="title">AI Model - Choose Your Input Method</h1>
     <button id="webcam-start" type="button" onclick="startWebcam()">Use Webcam</button>
     <button id="file-upload" type="button" onclick="uploadImage()">Upload Image</button>
     <br>
-    <div id="loading">Loading model...</div>
     <div id="webcam-container"></div>
     <input type="file" id="image-upload" style="display:none;" accept="image/*" onchange="handleImageUpload(event)">
     <div id="image-container"></div>
@@ -68,4 +23,70 @@
 
         // Load the model
         async function loadModel() {
-            document.getElementById("loading").style.display = "block";
+            const modelURL = URL + "model.json";
+            const metadataURL = URL + "metadata.json";
+            model = await tmImage.load(modelURL, metadataURL);
+            maxPredictions = model.getTotalClasses();
+        }
+
+        // Webcam functionality
+        async function startWebcam() {
+            await loadModel();
+            const flip = true; 
+            webcam = new tmImage.Webcam(500, 400, flip);
+            await webcam.setup(); 
+            await webcam.play();
+            window.requestAnimationFrame(webcamLoop);
+            document.getElementById("webcam-container").appendChild(webcam.canvas);
+        }
+
+        async function webcamLoop() {
+            webcam.update(); 
+            await predict(webcam.canvas);
+            window.requestAnimationFrame(webcamLoop);
+        }
+
+        // File upload functionality
+        async function uploadImage() {
+            await loadModel();
+            document.getElementById('image-upload').click();
+        }
+
+        function handleImageUpload(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = async function (e) {
+                    const imgElement = document.createElement("img");
+                    imgElement.src = e.target.result;
+                    imgElement.height = 224;
+                    imgElement.width = 224;
+
+                    const imageContainer = document.getElementById("image-container");
+                    imageContainer.innerHTML = ""; 
+                    imageContainer.appendChild(imgElement);
+
+                    await predict(imgElement);
+                };
+                reader.readAsDataURL(file);
+            }
+        }
+
+        // Prediction functionality
+        async function predict(input) {
+            const prediction = await model.predict(input);
+            updateLabels(prediction);
+        }
+
+        function updateLabels(predictions) {
+            labelContainer = document.getElementById("label-container");
+            labelContainer.innerHTML = ""; 
+            for (let i = 0; i < predictions.length; i++) {
+                const classPrediction =
+                    predictions[i].className + " : " + (predictions[i].probability.toFixed(3) * 100) + "%";
+                labelContainer.appendChild(document.createElement("div")).innerHTML = classPrediction;
+            }
+        }
+    </script>
+</body>
+</html>
