--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script async src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <style>
         body {
-            background-image: url('https://example.com/car-pattern.jpg'); /* Add car-related design */
+            background-image: url('https://raw.githubusercontent.com/Vishesh-R/Vehicleidentifier/main/12442-front-of-black-sports-car-wallpaper-top-free-front-of-black.jpeg
+'); /* Add car-related design */
             background-size: cover;
             background-position: center;
             color: white;
