--- a/index.html
+++ b/index.html
@@ -55,6 +55,22 @@
             align-items: center; /* Vertically center text */
             height: auto; /* Make height just slightly larger than the text */
         }
+        #loading-bar-container {
+            width: 100%;
+            margin: 10px 0;
+            position: relative;
+        }
+        #loading-bar {
+            height: 4px;
+            width: 0%;
+            background-color: lightgrey;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+        #label-container div:last-child {
+            grid-column: 2 / 3; /* Move the last class to the middle column */
+        }
     </style>
 </head>
 <body>
@@ -65,6 +81,9 @@
     <div id="webcam-container"></div>
     <input type="file" id="image-upload" style="display:none;" accept="image/*" onchange="handleImageUpload(event)">
     <div id="image-container"></div>
+    <div id="loading-bar-container">
+        <div id="loading-bar"></div>
+    </div>
     <div id="label-container"></div>
 
     <script type="text/javascript">
@@ -120,6 +139,9 @@
                     imageContainer.innerHTML = ""; 
                     imageContainer.appendChild(imgElement);
 
+                    // Show loading bar during prediction
+                    document.getElementById("loading-bar").style.width = "0%";
+
                     while(true) {
                         await predict(imgElement);
                         await delay(2000);
@@ -131,8 +153,12 @@
 
         // Prediction functionality
         async function predict(input) {
+            document.getElementById("loading-bar").style.width = "50%"; // Start loading bar
             const prediction = await model.predict(input);
             updateLabels(prediction);
+            document.getElementById("loading-bar").style.width = "100%"; // End loading bar after prediction
+            await delay(500); // Wait before resetting the loading bar
+            document.getElementById("loading-bar").style.width = "0%"; // Reset loading bar
         }
 
         function updateLabels(predictions) {
