--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <style>
         body {
-            background-color: #333; /* Dark grey background */
+            background-image: url(./background_image.jpeg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            background-attachment: fixed;
             color: white;
             font-family: 'Sans-serif';
             text-align: center;
