--- a/index.html
+++ b/index.html
@@ -92,6 +92,23 @@
                 background-color: rgb(255, 0, 0, 0.7);
                 color: rgb(255, 255, 255);
             }
+            @media screen and (max-width:800px){
+                #other-container{
+                    grid-template-columns: repeat(2, auto);
+                }
+                #other-container div{
+                    width: 220px;
+                    height: 35px;
+                    font-size: 15px;
+                }
+                #label-container {
+                    grid-template-columns: repeat(1, auto);
+                }
+                #label-container div {
+                    font-size: 18px;
+                    width: 350px;
+                }
+            }
         </style>
     </head>
     <body>
